crates/webfang_core/tests/snapshots/waf_fixtures_test__news_cloudflare_200.snap
---
source: crates/webfang_core/../../tests/waf_fixtures_test.rs
expression: "redact_nondeterministic(Path::new(\"__no_temp__\"), &summary)"
---
is_blocked: false
  - Cloudflare (patrón: cloudflare, tier: huella)
